<resources>
    <string name="app_name">Mapa Signala</string>
    <string name="interval">Interval</string>
    <string name="key_interval" translatable="false">interval</string>
    <string name="key_metered" translatable="false">metered</string>
    <string name="metered">Metered connections</string>
    <string name="summary_metered">Enable uploading data to server over metered connections (such as mobile data)</string>
    <string name="summary_interval">How often should the data be uploaded to the server</string>
    <string name="strength">Strength:</string>
    <string name="provider">Provider:</string>
    <string name="type">Type:</string>
    <string name="location">Location:</string>
    <string name="settings">Settings</string>
    <string name="generation">Generation:</string>
    <string name="strength_format" translatable="false">%1$d dBm</string>
    <string name="type_format" translatable="false">%1$s %2$.1fG</string>
    <string name="location_format" translatable="false">%1$f %2$f</string>
    <string name="help">Help</string>
    <string name="status">Status</string>
    <string name="signal_properties">Signal Properties</string>
    <string name="ok">OK</string>
    <string name="min" translatable="false">MIN</string>
    <string name="avg">AVG</string>
    <string name="max">MAX</string>
    <string-array name="provider">
        <item>Mine</item>
        <item>All</item>
        <item>mt:s</item>
        <item>Vip</item>
        <item>Telenor</item>
    </string-array>
    <string-array name="generation">
        <item>All</item>
        <item>4G</item>
        <item>3G</item>
        <item>2G</item>
    </string-array>
    <string name="help_text">
        - Na mapi ispod možete videti označena mesta sa signalima, gde jarkije boje označavaju jači signal. Crvena boja označava 2G, žuta 3G, a zelena 4G mrežu\n
        - Nakon dugog pritiska na jedan od obojenih kružića će se pojaviti prozor sa podacima o jačini signala na toj lokaciji\n
        - Kroz meni iznad mape možete podesiti konkretnog provajdera kojeg želite da vidite\n
        - Pritiskom na dugme za status (i) otići ćete na stranicu sa podacima o jačini signala na vašoj trenutnoj lokaciji\n
        - Pritiskom na podešavanja možete podesiti interval između dva slanja podataka sa vašeg uređaja na server, kao i da li se slanje vrši preko mobilnog interneta
    </string>
    <string name="error">An error occurred, please try again</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="mts" translatable="false">mt:s</string>
    <string name="g4" translatable="false">4G:</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="g3" translatable="false">3G:</string>
    <string name="g2" translatable="false">2G:</string>
    <string name="vip" translatable="false">VIP</string>
    <string name="telenor" translatable="false">Telenor</string>
</resources>
