<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/avg"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/mts"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g4"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M4Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M4Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M4Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g3"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M3Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M3Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M3Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g2"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M2Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M2Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/M2Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/vip"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g4"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V4Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V4Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V4Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g3"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V3Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V3Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V3Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g2"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V2Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V2Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/V2Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/telenor"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g4"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T4Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T4Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T4Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g3"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T3Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T3Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T3Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/g2"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T2Mi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T2Av"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
        <TextView
            android:id="@+id/T2Mx"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
        />
    </TableRow>
</TableLayout>